--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+Makefile
+signal_handler
+signal_alarm
+signal_segfault
+signal_sigaction
+recv_signal
+send_signal
